# composite-pattern

./: CMakeLists.txt
include/: composite.h
src/: composite.cpp  test.json
